--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <!-- Your code here -->
+  </head>
+     <img 
+      src="..~/phase-0-html-images-lab/home/mercy-mumbe/Downloads/download.jpeg"
+     >
+     <img 
+      src="~/phase-0-html-images-lab/home/mercy-mumbe/Downloads/download.jpeg" 
+      alt="Software Engineering"
+     >
+     <img 
+      src="~/phase-0-html-images-lab/home/mercy-mumbe/Downloads/download.jpeg" 
+      alt="Software Engineering"
+      title="Bright Future for Software Engineering Students"
+     >
   </body>
 </html>
