--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <body>
     <!-- Your code here -->
   </head>
-     <img 
-      src="..~/phase-0-html-images-lab/home/mercy-mumbe/Downloads/download.jpeg"
+     <img src="2.jpeg"> 
+     <img src="2.jpeg" alt= "Software Engineering"
      >
      <img 
-      src="~/phase-0-html-images-lab/home/mercy-mumbe/Downloads/download.jpeg" 
-      alt="Software Engineering"
-     >
-     <img 
-      src="~/phase-0-html-images-lab/home/mercy-mumbe/Downloads/download.jpeg" 
+      src="2.jpeg" 
       alt="Software Engineering"
       title="Bright Future for Software Engineering Students"
      >
